force-app/main/default/objects/MT_VoiceAssistantConfig__mdt/MT_VoiceAssistantConfig__mdt.object-meta.xml
<CustomObject>
    <!--
    ================================================================================
    MT RECORD SUGGESTION - Lightning Web Component
    ================================================================================
    Author: Michael Tietze, Principal AI Architect
    Contact: mtietze@salesforce.com
    Created: December 2025
    Version: 1.5
    
    COPYRIGHT AND DISTRIBUTION
    Copyright © 2025 Salesforce, Inc. All rights reserved.
    
    INTERNAL USE ONLY - This code may not be shared externally or distributed
    outside of Salesforce without prior written approval from Michael Tietze
    (mtietze@salesforce.com).
    ================================================================================
    -->

    <description>Configuration profiles for MT Voice Meeting Assistant. Each profile defines transcription provider, prompt template, and other settings.</description>
    <label>MT Voice Assistant Config</label>
    <pluralLabel>MT Voice Assistant Configs</pluralLabel>
</CustomObject>