force-app/main/default/objects/MT_VoiceAssistantConfig__mdt/fields/AllowLanguageOverride__c.field-meta.xml
<CustomField>
    <fullName>AllowLanguageOverride__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, users can override the default language settings in the transcription component.</description>
    <label>Allow Language Override</label>
    <type>Checkbox</type>
</CustomField>