force-app/main/default/objects/MT_VoiceAssistantConfig__mdt/fields/DefaultSpokenLanguage__c.field-meta.xml
<CustomField>
    <fullName>DefaultSpokenLanguage__c</fullName>
    <description>Default language for speech input. Use ISO 639-1 codes (e.g., en, de, fr, es). Leave blank to auto-detect from user language.</description>
    <label>Default Spoken Language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>