force-app/main/default/objects/MT_VoiceAssistantConfig__mdt/fields/DefaultTranscriptionLanguage__c.field-meta.xml
<CustomField>
    <fullName>DefaultTranscriptionLanguage__c</fullName>
    <description>Default language for transcription output. Use ISO 639-1 codes (e.g., en, de, fr, es). Leave blank to use the same as spoken language.</description>
    <label>Default Transcription Language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>