force-app/main/default/objects/MT_VoiceAssistantConfig__mdt/fields/EnableDiarization__c.field-meta.xml
<CustomField>
    <fullName>EnableDiarization__c</fullName>
    <description>Enable speaker diarization (speaker identification) for transcription. Only available with v2 endpoint or streaming with show-speaker-label parameter.</description>
    <label>Enable Diarization</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>