force-app/main/default/objects/MT_VoiceAssistantConfig__mdt/fields/PromptTemplateName__c.field-meta.xml
<CustomField>
    <!--
    ================================================================================
    MT RECORD SUGGESTION - Lightning Web Component
    ================================================================================
    Author: Michael Tietze, Principal AI Architect
    Contact: mtietze@salesforce.com
    Created: December 2025
    Version: 1.5
    
    COPYRIGHT AND DISTRIBUTION
    Copyright © 2025 Salesforce, Inc. All rights reserved.
    
    INTERNAL USE ONLY - This code may not be shared externally or distributed
    outside of Salesforce without prior written approval from Michael Tietze
    (mtietze@salesforce.com).
    ================================================================================
    -->

    <fullName>PromptTemplateName__c</fullName>
    <description>API name of the Prompt Template to use for AI analysis</description>
    <label>Prompt Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>