force-app/main/default/objects/MT_VoiceAssistantConfig__mdt/fields/ShowProviderSelector__c.field-meta.xml
<CustomField>
    <!--
    ================================================================================
    MT RECORD SUGGESTION - Lightning Web Component
    ================================================================================
    Author: Michael Tietze, Principal AI Architect
    Contact: mtietze@salesforce.com
    Created: December 2025
    Version: 1.5
    
    COPYRIGHT AND DISTRIBUTION
    Copyright © 2025 Salesforce, Inc. All rights reserved.
    
    INTERNAL USE ONLY - This code may not be shared externally or distributed
    outside of Salesforce without prior written approval from Michael Tietze
    (mtietze@salesforce.com).
    ================================================================================
    -->

    <fullName>ShowProviderSelector__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, shows a dropdown in the transcription component that allows users to switch between Einstein Transcribe and OpenAI Whisper on the fly. Useful for testing or when both providers are configured.</description>
    <inlineHelpText>Allow users to select transcription provider (Einstein or Whisper)</inlineHelpText>
    <label>Show Provider Selector</label>
    <type>Checkbox</type>
</CustomField>