force-app/main/default/objects/MT_VoiceAssistantConfig__mdt/fields/TranscriptionEndpoint__c.field-meta.xml
<CustomField>
    <fullName>TranscriptionEndpoint__c</fullName>
    <description>Transcription API endpoint: v1 (basic), v2 (with diarization), or streaming (WebSocket)</description>
    <label>Transcription Endpoint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>v1</fullName>
                <default>true</default>
                <label>v1 - Basic Transcription</label>
            </value>
            <value>
                <fullName>v2</fullName>
                <label>v2 - With Diarization</label>
            </value>
            <value>
                <fullName>streaming</fullName>
                <label>Streaming - Real-time WebSocket</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>