force-app/main/default/objects/MT_VoiceAssistantConfig__mdt/fields/TranscriptionEngine__c.field-meta.xml
<CustomField>
    <fullName>TranscriptionEngine__c</fullName>
    <description>Transcription engine: internal (Einstein native, fast), aws (Amazon Transcribe, high quality), deepgram_remote, deepgram_falcon, or deepgram_sagemaker</description>
    <label>Transcription Engine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>internal</fullName>
                <default>true</default>
                <label>internal - Einstein Native (Fast)</label>
            </value>
            <value>
                <fullName>aws</fullName>
                <label>aws - Amazon Transcribe (High Quality)</label>
            </value>
            <value>
                <fullName>deepgram_remote</fullName>
                <label>deepgram_remote - Deepgram API</label>
            </value>
            <value>
                <fullName>deepgram_falcon</fullName>
                <label>deepgram_falcon - Deepgram Falcon</label>
            </value>
            <value>
                <fullName>deepgram_sagemaker</fullName>
                <label>deepgram_sagemaker - Deepgram via SageMaker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>