force-app/main/default/objects/MT_VoiceAssistantConfig__mdt/fields/TranscriptionModel__c.field-meta.xml
<CustomField>
    <fullName>TranscriptionModel__c</fullName>
    <description>Transcription model to use (for Deepgram engines). Default: nova-2-phonecall. For multi-language detection with Deepgram, use nova-3.</description>
    <label>Transcription Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>