force-app/main/default/objects/MT_VoiceAssistantConfig__mdt/fields/TranscriptionProvider__c.field-meta.xml
<CustomField>
    <!--
    ================================================================================
    MT RECORD SUGGESTION - Lightning Web Component
    ================================================================================
    Author: Michael Tietze, Principal AI Architect
    Contact: mtietze@salesforce.com
    Created: December 2025
    Version: 1.5
    
    COPYRIGHT AND DISTRIBUTION
    Copyright © 2025 Salesforce, Inc. All rights reserved.
    
    INTERNAL USE ONLY - This code may not be shared externally or distributed
    outside of Salesforce without prior written approval from Michael Tietze
    (mtietze@salesforce.com).
    ================================================================================
    -->

    <fullName>TranscriptionProvider__c</fullName>
    <description>The transcription service provider to use (Einstein or Whisper)</description>
    <label>Transcription Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Einstein</fullName>
                <default>true</default>
                <label>Einstein</label>
            </value>
            <value>
                <fullName>Whisper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>