force-app/main/default/objects/MT_VoiceAssistantConfig__mdt/fields/WhisperModel__c.field-meta.xml
<CustomField>
    <!--
    ================================================================================
    MT RECORD SUGGESTION - Lightning Web Component
    ================================================================================
    Author: Michael Tietze, Principal AI Architect
    Contact: mtietze@salesforce.com
    Created: December 2025
    Version: 1.5
    
    COPYRIGHT AND DISTRIBUTION
    Copyright © 2025 Salesforce, Inc. All rights reserved.
    
    INTERNAL USE ONLY - This code may not be shared externally or distributed
    outside of Salesforce without prior written approval from Michael Tietze
    (mtietze@salesforce.com).
    ================================================================================
    -->

    <fullName>WhisperModel__c</fullName>
    <description>OpenAI Whisper model to use for transcription</description>
    <label>Whisper Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>whisper-1</fullName>
                <default>true</default>
                <label>whisper-1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>